# raggie

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  main.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  raggie.html  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree  modules.doctree  raggie.doctree
.github/workflows/: documentation.yml
_modules/: index.html
_modules/raggie/: data.html  main.html  model.html  types.html  utils.html
_sources/: index.rst.txt  raggie.rst.txt
data/: user_test.jsonl  user_train.jsonl
data/user/: train.jsonl  val.jsonl
docs/source/: conf.py  modules.rst
examples/: user.py
raggie/: __init__.py  data.py  main.py  model.py  types.py  utils.py
scripts/: deploy.sh  pypi.sh  testpypi.sh  versions.sh
