[project]
name = "raggie"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    'accelerate ~= 1.7.0',
    'datasets >=3.6.0, <5.0.0',
    'faiss-cpu ~= 1.11.0',
    'matplotlib ~= 3.9.2',
    'numpy ~= 2.3.0',
    'scikit-learn ~= 1.5.2',
    'scipy ~= 1.15.3',
    'seaborn ~= 0.13.2',
    'sentence-transformers ~= 4.1.0',
    'torch ~= 2.5.1'
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
